--- a/index.html
+++ b/index.html
@@ -4,9 +4,12 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Incendio Eubea 2021 - Analisi Satellitare</title>
-  <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
   <style>
-    * { margin: 0; padding: 0; box-sizing: border-box; }
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+    }
 
     body {
       font-family: 'Arial', sans-serif;
@@ -30,7 +33,6 @@
     header p {
       font-size: 1.2rem;
       font-weight: 300;
-      color: white;
     }
 
     section {
@@ -69,7 +71,7 @@
       border-radius: 8px;
     }
 
-    .slider-container img, .slider-container .after img {
+    .slider-container img {
       width: 100%;
       height: 100%;
       object-fit: cover;
@@ -85,29 +87,46 @@
       transition: width 0.5s ease;
     }
 
+    .slider-container .after img {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+    }
+
     input[type="range"] {
       width: 100%;
       margin-top: 1.5rem;
+      -webkit-appearance: none;
+      appearance: none;
       height: 8px;
       background: #ddd;
       border-radius: 5px;
       outline: none;
+      transition: background 0.2s ease;
     }
 
-    input[type="range"]::-webkit-slider-thumb,
+    input[type="range"]:focus {
+      background: #ccc;
+    }
+
+    input[type="range"]::-webkit-slider-thumb {
+      -webkit-appearance: none;
+      appearance: none;
+      width: 25px;
+      height: 25px;
+      border-radius: 50%;
+      background: #2d3e50;
+      cursor: pointer;
+      transition: background 0.2s ease;
+    }
+
     input[type="range"]::-moz-range-thumb {
       width: 25px;
       height: 25px;
       border-radius: 50%;
       background: #2d3e50;
       cursor: pointer;
-    }
-
-    #map {
-      width: 100%;
-      height: 500px;
-      border-radius: 8px;
-      margin-top: 1rem;
+      transition: background 0.2s ease;
     }
 
     footer {
@@ -129,24 +148,12 @@
   <section>
     <h2>Descrizione dell'evento</h2>
     <p>
-      Nell'estate del <strong>2021</strong>, l'isola greca di <strong>Eubea</strong> è stata colpita da uno dei più <strong>devastanti incendi boschivi</strong> mai registrati in Europa. Le fiamme, alimentate da un'ondata di <strong>caldo estremo</strong> e da venti secchi, hanno distrutto oltre <strong>120.000 ettari</strong> di foreste, abitazioni e terreni agricoli.
+      Nell'estate del 2021, l'isola greca di Eubea (Evia) è stata colpita da uno dei più devastanti incendi boschivi mai registrati in Europa. Le fiamme, alimentate da un'ondata di caldo estremo e da venti secchi, hanno bruciato oltre 120.000 ettari di foreste, case e terreni agricoli.
     </p>
     <p>
-      Le immagini satellitari del programma <strong>Copernicus Sentinel-2</strong> evidenziano chiaramente l'entità dei danni ambientali subiti dall'isola.
+      Le immagini satellitari fornite da Copernicus Sentinel-2 permettono di osservare chiaramente l'entità dei danni prima e dopo l'evento.
     </p>
-  </section>
 
-  <section>
-    <h2>Cause e conseguenze dell'incendio</h2>
-    <p>
-      Le principali <strong>cause</strong> dell'incendio includono temperature anomale superiori ai <strong>45°C</strong>, una lunga <strong>ondata di siccità</strong> e forti <strong>venti estivi</strong>. L'insufficienza di mezzi antincendio nella regione ha aggravato ulteriormente la situazione.
-    </p>
-    <p>
-      Le <strong>conseguenze ambientali</strong> sono state gravi: perdita di biodiversità, incremento delle emissioni di CO₂, erosione del suolo e contaminazione delle risorse idriche. A livello sociale, centinaia di persone sono state evacuate e molte abitazioni sono andate distrutte.
-    </p>
-  </section>
-
-  <section>
     <h2>Confronto satellitare: Prima e Dopo</h2>
     <div class="img-slider">
       <div class="slider-container" id="slider">
@@ -155,49 +162,48 @@
           <img src="after.jpg" alt="Dopo l'incendio" />
         </div>
       </div>
+      <input type="range" min="0" max="100" value="0" id="sliderInput" />
     </div>
-    <input type="range" min="0" max="100" value="0" id="sliderInput" />
   </section>
 
   <section>
     <h2>Analisi NDVI – Vegetazione danneggiata</h2>
     <p>
-      L'<strong>NDVI</strong> (Normalized Difference Vegetation Index), calcolato da immagini multispettrali, mostra una drastica riduzione della <strong>vegetazione sana</strong>. Le aree verdi rigogliose sono state rimpiazzate da <strong>zone nere</strong> e brune, segno di <strong>suolo nudo</strong>, <strong>cenere</strong> e perdita di copertura vegetale.
+      L'indice NDVI, calcolato a partire dalle bande multispettrali del satellite Sentinel-2, mostra una drastica riduzione della vegetazione sana dopo l'incendio. Le zone verdi (alta vegetazione) sono state sostituite da aree nere, indicative di suolo bruciato o cenere.
     </p>
-    <img src="ndvi_comparison.jpg" alt="NDVI Prima e Dopo" style="width:100%; margin-top: 1rem;" />
-  </section>
 
-  <section>
-    <h2>Mappa interattiva di Eubea, Grecia</h2>
-    <p>
-      La mappa seguente mostra la posizione dell'<strong>isola di Eubea</strong>, seconda isola più grande della Grecia, situata a nord-est di Atene. È possibile visualizzare l'area colpita dagli incendi e la sua vicinanza alle aree urbane e boschive.
-    </p>
-    <div id="map"></div>
+    <div class="img-slider">
+      <div class="slider-container" id="ndviSlider">
+        <img src="ndvi_before.jpg" alt="NDVI prima dell'incendio" />
+        <div class="after" id="ndviAfterDiv">
+          <img src="ndvi_after.jpg" alt="NDVI dopo l'incendio" />
+        </div>
+      </div>
+      <input type="range" min="0" max="100" value="0" id="ndviSliderInput" />
+    </div>
   </section>
 
   <footer>
-    <p style="color: white;">
-      Fonte dati: Copernicus Sentinel-2 | Creato da Mattia Banzato, Mattia De Mori, Luca Dall'Agnola • 2025
-    </p>
+    <p>Fonte dati: Copernicus Sentinel-2 | Realizzato da [Il Tuo Nome]</p>
   </footer>
 
-  <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
   <script>
-    // Slider
     const sliderInput = document.getElementById("sliderInput");
     const afterDiv = document.getElementById("afterDiv");
+
     sliderInput.addEventListener("input", function () {
-      afterDiv.style.width = this.value + "%";
+      const val = this.value;
+      afterDiv.style.width = val + "%";
     });
 
-    // Mappa Leaflet centrata su Eubea
-    const map = L.map('map').setView([38.6769, 23.8790], 9);
-    L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
-      attribution: '&copy; <a href="https://www.openstreetmap.org/">OpenStreetMap</a> contributors'
-    }).addTo(map);
-    L.marker([38.6769, 23.8790]).addTo(map)
-      .bindPopup('Isola di Eubea – Grecia')
-      .openPopup();
+    const ndviSliderInput = document.getElementById("ndviSliderInput");
+    const ndviAfterDiv = document.getElementById("ndviAfterDiv");
+
+    ndviSliderInput.addEventListener("input", function () {
+      const val = this.value;
+      ndviAfterDiv.style.width = val + "%";
+    });
   </script>
+
 </body>
 </html>
