--- a/index.html
+++ b/index.html
@@ -351,9 +351,9 @@
     
     <div class="img-slider">
       <div class="slider-container" id="slider">
-        <img src="nvdi_before.jpg" alt="Prima dell'incendio - Immagine satellitare che mostra la lussureggiante vegetazione verde di Eubea" />
+        <img src="img/nvdi_before.jpg" alt="Prima dell'incendio - Immagine satellitare che mostra la lussureggiante vegetazione verde di Eubea" />
         <div class="after" id="afterDiv">
-          <img src="nvdi_after.jpg" alt="Dopo l'incendio - La stessa area mostra vaste zone bruciate e vegetazione distrutta" />
+          <img src="img/nvdi_after.jpg" alt="Dopo l'incendio - La stessa area mostra vaste zone bruciate e vegetazione distrutta" />
         </div>
       </div>
       <input type="range" min="0" max="100" value="0" id="sliderInput" />
