--- a/index.html
+++ b/index.html
@@ -161,9 +161,9 @@
     <h2>Confronto satellitare: Prima e Dopo</h2>
     <div class="img-slider">
       <div class="slider-container" id="slider">
-        <img src="before.jpg" alt="Prima dell'incendio" />
+        <img src="ndvi_before.jpg" alt="Prima dell'incendio" />
         <div class="after" id="afterDiv">
-          <img src="after.jpg" alt="Dopo l'incendio" />
+          <img src="ndvi_after.jpg" alt="Dopo l'incendio" />
         </div>
       </div>
     </div>
@@ -179,7 +179,7 @@
   </section>
 
   <footer>
-    <p>Fonte dati: Copernicus Sentinel-2 | Realizzato da [Il Tuo Nome]</p>
+    <p>Fonte dati: Copernicus Sentinel-2 | Realizzato da Banzato Mattia, Dall'Agnola Luca, De Mori Mattia</p>
   </footer>
 
   <script>
